# Non-Newtonian

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
Game/: Application.cpp  Application.h  CMakeLists.txt  Entity.cpp  Entity.h  Game.cpp  Game.h  Player.cpp  Player.h  main.cpp
